# TreeC

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  TreeC.toml  roadmap.md
.claude-docs/: CHANGELOG.md  PROJECT.md
.github/workflows/: ci.yml  release.yml
src/: agent.rs  analyzer.rs  brain.rs  config.rs  generator.rs  main.rs  neural.rs  scanner.rs
src/tui/: app.rs  mod.rs  screens.rs  wizard.rs
