[package]
name = "treec-rust"
version = "0.1.0"
edition = "2021"
description = "High-performance repository documentation & structure export tool"
repository = "https://github.com/Vitorvzp/TreeC"

[[bin]]
name = "treec"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] } # CLI Arguments
walkdir = "2.4" # Fast recursive stepping
regex = "1.10"  # Patterns & TOML manual parsing
serde = { version = "1.0", features = ["derive"] } # Metadata mapping
serde_json = "1.0" # JSON Artifact
chrono = "0.4" # Timestamps
ureq = { version = "2.9", features = ["json"] } # HTTP client for AI API

